Рефакторинг кода метода upload. Добавление нового функционала. Попытка сделать докерйфайл и компос

--- a/src/main/resources/application-secret.yaml
+++ b/src/main/resources/application-secret.yaml
@@ -1,46 +1,46 @@
-#spring:
-#  datasource:
-#    url: jdbc:postgresql://localhost:5432/jira
-#    username: ${DB_USERNAME}
-#    password: ${DB_PASSWORD}
-#
-#  mail:
-#    properties:
-#      mail:
-#        smtp:
-#          starttls:
-#            enable: true
-#          auth: true
-#    host: smtp.gmail.com
-#    username: ${MAIL_USERNAME}
-#    password: ${MAIL_PASSWORD}
-#    port: 587
-#
-#  security:
-#    oauth2:
-#      client:
-#        registration:
-#          github:
-#            client-id: ${GITHUB_CLIENT_ID}
-#            client-secret: ${GITHUB_CLIENT_SECRET}
-#            scope:
-#              - email
-#          google:
-#            client-id: ${GOOGLE_CLIENT_ID}
-#            client-secret: ${GOOGLE_CLIENT_SECRET}
-#            scope:
-#              - email
-#              - profile
-#          gitlab:
-#            client-id: ${GITLAB_CLIENT_ID}
-#            client-secret: ${GITLAB_CLIENT_SECRET}
-#            client-name: GitLab
-#            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
-#            authorization-grant-type: authorization_code
-#            scope: read_user
-#        provider:
-#          gitlab:
-#            authorization-uri: https://gitlab.com/oauth/authorize
-#            token-uri: https://gitlab.com/oauth/token
-#            user-info-uri: https://gitlab.com/api/v4/user
-#            user-name-attribute: email
+spring:
+  datasource:
+    url: jdbc:postgresql://localhost:5432/jira_db
+    username: jira_user
+    password: 123
+
+  mail:
+    properties:
+      mail:
+        smtp:
+          starttls:
+            enable: true
+          auth: true
+    host: smtp.gmail.com
+    username: ${MAIL_USERNAME}
+    password: ${MAIL_PASSWORD}
+    port: 587
+
+  security:
+    oauth2:
+      client:
+        registration:
+          github:
+            client-id: ${GITHUB_CLIENT_ID}
+            client-secret: ${GITHUB_CLIENT_SECRET}
+            scope:
+              - email
+          google:
+            client-id: ${GOOGLE_CLIENT_ID}
+            client-secret: ${GOOGLE_CLIENT_SECRET}
+            scope:
+              - email
+              - profile
+          gitlab:
+            client-id: ${GITLAB_CLIENT_ID}
+            client-secret: ${GITLAB_CLIENT_SECRET}
+            client-name: GitLab
+            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
+            authorization-grant-type: authorization_code
+            scope: read_user
+        provider:
+          gitlab:
+            authorization-uri: https://gitlab.com/oauth/authorize
+            token-uri: https://gitlab.com/oauth/token
+            user-info-uri: https://gitlab.com/api/v4/user
+            user-name-attribute: email
