--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,14 +9,15 @@ app:
 
 spring:
   init:
-    mode: never
+    mode: always
   jpa:
     show-sql: true
     open-in-view: false
 
     # validate db by model
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
+
 
     properties:
       #  http://docs.jboss.org/hibernate/orm/5.3/userguide/html_single/Hibernate_User_Guide.html#configurations
@@ -25,14 +26,10 @@ spring:
         default_batch_fetch_size: 20
         # https://stackoverflow.com/questions/21257819/what-is-the-difference-between-hibernate-jdbc-fetch-size-and-hibernate-jdbc-batc
         jdbc.batch_size: 20
-  datasource:
-    url: jdbc:postgresql://localhost:5432/jira
-    username: ${DB_USERNAME}
-    password: ${DB_PASSWORD}
 
   liquibase:
     changeLog: "classpath:db/changelog.sql"
-    enabled: false
+    enabled: true
 
   # Jackson Fields Serialization
   jackson:
@@ -47,54 +44,16 @@ spring:
     cache-names: users
     caffeine.spec: maximumSize=10000,expireAfterAccess=5m
 
-  security:
-    oauth2:
-      client:
-        registration:
-          github:
-            client-id: ${GITHUB_CLIENT_ID}
-            client-secret: ${GITHUB_CLIENT_SECRET}
-            scope:
-              - email
-          google:
-            client-id: ${GOOGLE_CLIENT_ID}
-            client-secret: ${GOOGLE_CLIENT_SECRET}
-            scope:
-              - email
-              - profile
-          gitlab:
-            client-id: ${GITLAB_CLIENT_ID}
-            client-secret: ${GITLAB_CLIENT_SECRET}
-            client-name: GitLab
-            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
-            authorization-grant-type: authorization_code
-            scope: read_user
-        provider:
-          gitlab:
-            authorization-uri: https://gitlab.com/oauth/authorize
-            token-uri: https://gitlab.com/oauth/token
-            user-info-uri: https://gitlab.com/api/v4/user
-            user-name-attribute: email
-
   sql:
     init:
       mode: always
 
-  mail:
-    properties:
-      mail:
-        smtp:
-          starttls:
-            enable: true
-          auth: true
-    host: smtp.gmail.com
-    username: ${MAIL_USERNAME}
-    password: ${MAIL_PASSWORD}
-    port: 587
   thymeleaf.check-template-location: false
 
   mvc.throw-exception-if-no-handler-found: true
   web.resources.add-mappings: false
+  config:
+    import: "classpath:application-secret.yaml"
 
 logging:
   level:
