--- a/src/main/resources/application-secret.yaml
+++ b/src/main/resources/application-secret.yaml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/jira_db
-    username: jira_user
-    password: 123
+    url: jdbc:postgresql://localhost:5432/jira
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
 
   mail:
     properties:
